<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/n_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/date"
            app:srcCompat="@drawable/ic_calendar_holo_light" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/simcard"
            app:srcCompat="@drawable/ic_simcard_holo_light" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/wifi"
            app:srcCompat="@drawable/ic_wifi_holo_light" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/total"
            app:srcCompat="@drawable/ic_save_holo_light" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/n_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/n_header" />
</RelativeLayout>