<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:keepScreenOn="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_below="@id/otp_wrapper">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tsel_dump"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_below="@id/msisdn_wrapper"
            android:id="@+id/otp_wrapper">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_key_holo_light"
                android:id="@+id/imageView6" android:contentDescription="@string/key"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/otp_password"
                android:ems="10"
                android:id="@+id/tsel_otp" android:layout_weight="1" android:importantForAutofill="no"
                tools:ignore="LabelFor"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/msisdn_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/simcard"
                app:srcCompat="@drawable/ic_simcard_holo_light"/>

        <EditText
                android:id="@+id/tsel_msisdn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical|fill_vertical"
                android:inputType="phone" android:autofillHints="" tools:ignore="LabelFor"
                android:hint="@string/telkomsel_number"/>
    </LinearLayout>

</RelativeLayout>