<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_required"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:text="@string/permission_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:text="@string/restart"
            android:textAlignment="center" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>