<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/AMo"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#FFFFFF">

                <LinearLayout
                    android:id="@+id/start_ad_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/AMo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnControl"
        android:background="@color/colorPrimary"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/auto_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:padding="5dp"
            android:text="@string/auto_mode" />

        <EditText
            android:id="@+id/refresh_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="refresh time (secs)"
            android:ems="10"
            android:hint="@string/refresh_time_secs"
            android:inputType="number"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_ad_counter"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp">

        <Button
            android:id="@+id/start_btn_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/refresh"
            android:textSize="11sp" />

        <Button
            android:id="@+id/start_btn_interstitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/interstitial"
            android:textSize="11sp" />

        <Button
            android:id="@+id/start_btn_rewarded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/rewarded"
            android:textSize="11sp" />

        <Button
            android:id="@+id/start_btn_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/info"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_ad_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/start_banner_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Banner = "
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/start_inter_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="Interstitial = "
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/start_rewarded_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Rewarded = "
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</RelativeLayout>
