<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/netinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="6dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/netUpExpanded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Upload Speed"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/netDownExpanded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Download Speed"
            android:textAppearance="@style/TextAppearance.Compat.Notification"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_facebot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/netinfo"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebot_notif_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_facebook_holo_light"
            tools:src="@drawable/ic_facebook"
            android:background="@drawable/ic_facebook_holo_dark"
            tools:tint="#000000" />

        <TextView
            android:id="@+id/bot_status_expanded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="8"
            android:text="@string/bot_status"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Info" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vpnhotspot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_facebot"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/vpn_hostpot_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_hotspot_holo_light"
            tools:src="@drawable/ic_hotspot"
            android:background="@drawable/ic_hotspot_holo_dark"
            tools:tint="#000000" />

        <TextView
            android:id="@+id/hotspot_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="8"
            android:text="@string/hotspot_vpn_status"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Info" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vpnhotspot"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/stop_bot_button_notification"
            style="@style/TextAppearance.Compat.Notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="Stop Bot"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
            app:backgroundTint="#FFFFFF"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/open_app_button_notification"
            style="@style/TextAppearance.Compat.Notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="Open App"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
            app:backgroundTint="#FFFFFF"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</RelativeLayout>