<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center_vertical|center|center_horizontal"
    android:keepScreenOn="true"
    tools:context="com.dimaslanjaka.tools.Facebook.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="pin"
        app:titleEnabled="true">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:tabGravity="fill"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_settings_black_24dp"
                android:tag="settings" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_facebook_holo_dark"
                android:tag="webview" />

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/settings_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="visible">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/c_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="User ID Should Appeared Here"
                    android:textAlignment="center"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/fb_bot_enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Switch to enable"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="Customize Bot"
                    tools:ignore="HardcodedText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:hint="Run Every X Minutes"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/run_every_minutes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:text="1"
                            tools:ignore="HardcodedText" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:hint="Limit Like"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/limit_like"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#FFFFFF"
                            android:ems="10"
                            android:inputType="number"
                            android:text="1"
                            tools:ignore="HardcodedText" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/react_friend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/friends"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/react_fanpage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/fanpage" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/react_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/group"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/reactions_picker"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:checkedButton="@+id/radio_button_1">

                    <RadioButton
                        android:id="@+id/radio_button_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:tag="like"
                        android:text="LIKE"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:layout_width="match_parent"


                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:tag="love"
                        android:text="LOVE"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:tag="angry"
                        android:text="ANGRY"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_weight="1"
                        android:tag="wow"
                        android:text="WOW"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:layout_width="match_parent"


                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:tag="haha"
                        android:text="HAHA"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:tag="sad"
                        android:text="SAD"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:tag="random"
                        android:text="RANDOM"
                        tools:ignore="HardcodedText" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/webview_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_tab"
                android:orientation="vertical"
                android:visibility="visible">

                <include
                    layout="@layout/webview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>